# patina

./: .gitignore  CLAUDE.md  Cargo.toml  LOCALGPT_COMPARISON.md  MONTY_CODE_MODE_PLAN.md  README.md  RELEASE.md  config.example.json  config.json
.github/workflows/: ci.yml  release.yml
crates/nanobot-channels/: Cargo.toml
crates/nanobot-channels/src/: base.rs  lib.rs  manager.rs  markdown.rs  telegram.rs
crates/nanobot-cli/: Cargo.toml
crates/nanobot-cli/src/: main.rs
crates/nanobot-config/: Cargo.toml
crates/nanobot-config/src/: lib.rs  loader.rs  schema.rs
crates/nanobot-core/: Cargo.toml
crates/nanobot-core/src/: bus.rs  heartbeat.rs  lib.rs  session.rs
crates/nanobot-core/src/agent/: context.rs  loop.rs  memory.rs  mod.rs  skills.rs  subagent.rs
crates/nanobot-core/src/cron/: service.rs
crates/nanobot-core/src/tools/: cron.rs  filesystem.rs  message.rs  mod.rs  shell.rs  spawn.rs  web.rs
crates/nanobot-transcribe/: Cargo.toml
crates/nanobot-transcribe/src/: audio.rs  lib.rs
crates/patina-channels/: Cargo.toml
crates/patina-channels/src/: base.rs  lib.rs  manager.rs  markdown.rs  slack.rs  slack_markdown.rs  telegram.rs  web.rs  web_assets.rs
crates/patina-cli/: Cargo.toml
crates/patina-cli/src/: main.rs
crates/patina-config/: Cargo.toml
crates/patina-config/src/: lib.rs  loader.rs  schema.rs
crates/patina-core/: Cargo.toml
crates/patina-core/src/: lib.rs  persona.rs  session.rs  task.rs  usage.rs
crates/patina-core/src/agent/: context.rs  loop.rs  memory.rs  memory_index.rs  mod.rs  model_pool.rs  skills.rs  subagent.rs
crates/patina-core/src/cron/: mod.rs  service.rs  types.rs
crates/patina-core/src/tools/: cron.rs  filesystem.rs  memory_search.rs  mod.rs  shell.rs  task.rs  web.rs
crates/patina-transcribe/: Cargo.toml
crates/patina-transcribe/src/: audio.rs  groq.rs  lib.rs  local.rs
plans/: LOCALGPT_COMPARISON.md  MONTY_CODE_MODE_PLAN.md
scripts/: package-release.sh
skills/memory/: SKILL.md
web/: app.js  index.html  package.json  style.css  tsconfig.json  vite.config.ts
web/src/: api.ts  app.tsx  main.tsx  router.ts  types.ts
web/src/components/: ChatInput.module.css  ChatInput.tsx  ChatView.module.css  ChatView.tsx  Header.module.css  Header.tsx  MessageBubble.tsx  MessageList.tsx  Modal.tsx  PersonaEditor.module.css  PersonaEditor.tsx  PersonaManager.module.css  PersonaManager.tsx  PersonaPicker.module.css  PersonaPicker.tsx  Sidebar.module.css  Sidebar.tsx  TaskDetail.tsx  TaskEditor.tsx  TasksView.module.css  TasksView.tsx  ThinkingIndicator.tsx  UsageTable.tsx  UsageView.module.css  UsageView.tsx
web/src/lib/: markdown.ts
web/src/state/: messages.ts  personas.ts  sessions.ts  tasks.ts  usage.ts  websocket.ts
web/src/styles/: global.css  markdown.css
