[workspace]
members = [
    "crates/nanobot-config",
    "crates/nanobot-core",
    "crates/nanobot-channels",
    "crates/nanobot-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"

# Internal crates
nanobot-config = { path = "crates/nanobot-config" }
nanobot-core = { path = "crates/nanobot-core" }
nanobot-channels = { path = "crates/nanobot-channels" }
