[workspace]
members = [
    "crates/patina-config",
    "crates/patina-core",
    "crates/patina-channels",
    "crates/patina-transcribe",
    "crates/patina-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rig-core = "0.30"
schemars = "0.8"
thiserror = "2"
rustyline = "15"
dirs = "6"
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
base64 = "0.22"
mime_guess = "2"
which = "7"
html-escape = "0.2"
croner = "2"
uuid = { version = "1", features = ["v4"] }
teloxide = { version = "0.17", features = ["macros", "webhooks-axum"] }
termimad = "0.30"
nix = { version = "0.29", features = ["term"] }
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
glob = "0.3"
url = "2"
slack-morphism = { version = "2.17", features = ["hyper"] }
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
futures = "0.3"

# Internal crates
patina-config = { path = "crates/patina-config" }
patina-core = { path = "crates/patina-core" }
patina-channels = { path = "crates/patina-channels" }
patina-transcribe = { path = "crates/patina-transcribe" }
