[package]
name = "nanobot-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nanobot-core = { workspace = true }
nanobot-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
teloxide = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
nanobot-transcribe = { workspace = true }
