[package]
name = "nanobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nanobot"
path = "src/main.rs"

[dependencies]
nanobot-core = { workspace = true }
nanobot-channels = { workspace = true }
nanobot-config = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rig-core = { workspace = true }
dirs = { workspace = true }
rustyline = { workspace = true }
async-trait = { workspace = true }
nanobot-transcribe = { workspace = true, features = ["parakeet"] }
