[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nanobot-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
