[package]
name = "nanobot-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nanobot-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
which = { workspace = true }
html-escape = { workspace = true }
croner = { workspace = true }
uuid = { workspace = true }
readability = "0.3.0"
url = "2"

[dev-dependencies]
tempfile = "3"
