[package]
name = "patina-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
patina-core = { workspace = true }
patina-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
teloxide = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
patina-transcribe = { workspace = true }
url = { workspace = true }
slack-morphism = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
