[package]
name = "patina-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "patina"
path = "src/main.rs"

[features]
default = ["local-transcription"]
local-transcription = ["patina-transcribe/parakeet"]

[dependencies]
patina-core = { workspace = true }
patina-channels = { workspace = true }
patina-config = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rig-core = { workspace = true }
dirs = { workspace = true }
rustyline = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
patina-transcribe = { workspace = true }
termimad = { workspace = true }
nix = { workspace = true }
