[package]
name = "patina-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
patina-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
which = { workspace = true }
html-escape = { workspace = true }
croner = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
mime_guess = { workspace = true }
readability = "0.3.0"
url = "2"
rusqlite = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
